<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HisignEngine</string>
    <string name="camera_back">后置摄像头</string>
    <string name="camera_front">前置摄像头</string>
    <string name="tv_light">补光灯：</string>
    <string name="tv_light_switch">开关</string>
    <string name="tv_dark">暗</string>
    <string name="tv_bright">亮</string>
    <string name="tv_attribute">属性配置：</string>
    <string name="tv_face_frame">人脸框</string>
    <string name="tv_face_feature">人脸特征点</string>
    <string name="tv_face_attibute">人脸属性</string>
    <string name="tv_total_time">总计时间</string>
    <string name="tv_detail_time">详细时间</string>
    <string name="tv_auto_add">自动入库</string>
    <string name="tv_mode">核验模式：</string>
    <string name="tv_face_verify">人脸比对：</string>
    <string name="tv_front_filter">前帧过滤：</string>
    <string name="tv_back_filter">后帧过滤：</string>
    <string name="tv_verify_timeout">比对超时：</string>
    <string name="tv_min_face">最小人脸：</string>
    <string name="tv_finger_verify">指纹比对：</string>
    <string name="tv_finger_threshold">指纹阈值：</string>
    <string name="tv_finger_quality">指纹质量：</string>
    <string name="tv_face_channel_set">人脸比对通道设置：</string>
    <string name="tv_face_channel_0">通道1：</string>
    <string name="tv_top_threshold_0">top阈值：</string>
    <string name="tv_bottom_threshold_0">bottom阈值：</string>
    <string name="tv_n_threshold_0">1：n阈值：</string>
    <string name="tv_face_channel_1">通道2：</string>
    <string name="tv_top_threshold_1">top阈值：</string>
    <string name="tv_bottom_threshold_1">bottom阈值：</string>
    <string name="tv_n_threshold_1">1：n阈值：</string>
    <string name="et_n_threshold_1">范围：0-1</string>
    <string name="et_bottom_threshold_1">范围：0-1</string>
    <string name="et_top_threshold_1">范围：0-1</string>
    <string name="et_n_threshold_0">范围：0-1</string>
    <string name="et_bottom_threshold_0">范围：0-1</string>
    <string name="et_top_threshold_0">范围：0-1</string>
    <string name="et_finger_quality">范围：0-100</string>
    <string name="et_finger_threshold">范围：0-1000</string>
    <string name="et_min_face">范围：20-200</string>
    <string name="et_verify_timeout">范围：1-10</string>
    <string name="btn_lib_query">查 询</string>
    <string name="btn_lib_add">入 库</string>
    <string name="tv_format">图片仅支持jpg、bmp格式</string>
    <string name="btn_batch_add">批量入库</string>
    <string name="btn_collect_add">采集入库</string>
    <string name="tv_format_fp">图片仅支持bmp格式</string>
    <string name="tv_title_dialog">入库照片</string>
    <string name="tv_name_dialog">图片名字：</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="tv_title_dialog_lib">人脸图片入库</string>
    <string name="tv_title_fail">入库失败照片</string>
    <string name="tv_collect_title">采集指纹</string>
    <string name="tv_fp_score">指纹质量：</string>
    <string name="tv_fp_name">名称：</string>
    <string name="tv_fp_fail">未采集到合适指纹！</string>
    <string name="btn_ok_collect">入库</string>
    <string name="btn_del">删除</string>
    <string name="tv_user_id">人员编号</string>
    <string name="tv_id">人脸编号</string>
    <string name="tv_name">姓名</string>
    <string name="tv_path">人脸图片</string>
    <string name="tv_finger">指纹照片</string>
    <string name="tv_finger_value">指纹比值：</string>
    <string name="tv_face">现场照片</string>
    <string name="tv_face_threshold">人脸阈值：</string>
    <string name="tv_face_value">人脸比值：</string>
    <string name="tv_card">身份证照片</string>
    <string name="tv_card_name">姓名：</string>
    <string name="tv_card_sex">性别：</string>
    <string name="tv_card_nation">民族：</string>
    <string name="tv_card_birthday">出生日期：</string>
    <string name="tv_card_id">身份证号：</string>
    <string name="tv_fp">指纹：</string>
    <string name="tv_detect_total">核验总计：</string>
    <string name="tv_detect">人脸核验：</string>
    <string name="tv_card_read">身份证读取：</string>
    <string name="tv_feature">人脸提取特征：</string>
    <string name="tv_version">版本号：</string>
    <string name="config_system">系统设置</string>
    <string name="config_face">人脸库管理</string>
    <string name="config_fp">指纹库管理</string>
    <string name="msg_progress_dialog">加载文件中，请稍候！</string>
    <string name="no_files">当前目录下无文件！</string>
    <string name="filelist_attention">注意</string>
    <string name="filelist_msg">确认选定该项?</string>
    <string name="take_photo">拍照</string>
    <string name="authorization_overdue">授权过期</string>
    <string name="authorization_check">请检查授权</string>
    <string name="card_no_fp">身份证无指纹</string>
    <string name="face_pass">通过</string>
    <string name="face_not_pass">不通过</string>
    <string name="face_name_null">人脸照片名字为空！</string>
    <string name="formate_invalide">图片格式不正确！</string>
    <string name="face_toast">人脸阈值top >= bottom，使用默认参数！</string>
    <string name="add_success">成功入库</string>
    <string name="add_success_image">张图片！</string>
    <string name="add_success_face">位人员人脸信息！</string>
    <string name="add_success_fp">位人员指纹信息！</string>
    <string name="add_fail">入库失败：</string>
    <string name="authorization_fp">请检查指纹授权（</string>
    <string name="authorization_fp_0">）</string>
    <string name="card_fp_unknown">未知</string>
    <string name="card_fp_right_0">右手拇指</string>
    <string name="card_fp_right_1">右手食指</string>
    <string name="card_fp_right_2">右手中指</string>
    <string name="card_fp_right_3">右手环指</string>
    <string name="card_fp_right_4">右手小指</string>
    <string name="card_fp_left_0">左手拇指</string>
    <string name="card_fp_left_1">左手食指</string>
    <string name="card_fp_left_2">左手中指</string>
    <string name="card_fp_left_3">左手环指</string>
    <string name="card_fp_left_4">左手小指</string>
    <string name="card_fp_right_unknown">右手不确定指位</string>
    <string name="card_fp_left_unknown">左手不确定指位</string>
    <string name="card_fp_other_unknown">其他不确定指位</string>
    <string name="crash_toast">很抱歉,程序出现异常,即将退出！</string>
    <string name="face_limit_80">一个人最多入库80张图片！</string>
    <string name="face_no_files">当前文件夹下无合适人脸图片！</string>
    <string name="fp_no_files">当前文件夹下无合适指纹图片！</string>
    <string name="query_null">请输入查询字段！</string>
    <string name="all_select">全选</string>
    <string name="all_not_select">取消全选</string>
    <string name="fp_adding">正在入库，请稍等！</string>
    <string name="tv_path_fp">指纹图片</string>
    <string name="tv_back">返回</string>
    <string name="unit_fp">枚</string>
    <string name="msg_processing">处理中</string>
    <string name="add_fail_image">入库失败图片：</string>
    <string name="lib_image">底库图片</string>
    <string name="fp_add">指纹图片入库</string>
    <string name="fp_collect_start">开始采集</string>
    <string name="fp_hint">请摁捺指纹</string>
    <string name="unit_face">人</string>
</resources>