<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_face_lib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/system_lv_item_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_user_id"
            style="@style/style_main_tv_2"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/tv_user_id" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33ffffff" />

        <TextView
            android:id="@+id/tv_id"
            style="@style/style_main_tv_2"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/tv_id"
            android:visibility="gone" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33ffffff"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/style_main_tv_2"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_name" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33ffffff" />

        <TextView
            android:id="@+id/tv_path"
            style="@style/style_main_tv_2"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.7"
            android:gravity="center"
            android:text="@string/tv_path" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#33ffffff" />

        <LinearLayout
            android:id="@+id/ll_del"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btn_del"
                style="@style/style_main_tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/system_btn_bg"
                android:padding="5dp" />

            <Button
                android:id="@+id/btn_all_del"
                style="@style/style_main_tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/system_btn_bg"
                android:padding="5dp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_face_lib"
        android:background="#33ffffff" />
</RelativeLayout>